bug fix: increase arrow height on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -14,7 +14,7 @@ body {
 	&__arrow-left {
 		position: absolute;
 		width: 4.6rem;
-		height: 4.5rem;
+		height: 4.6rem;
 
 		top: 34.6rem;
 		left: 0.9rem;
@@ -47,7 +47,7 @@ body {
 	&__arrow-right {
 		position: absolute;
 		width: 4.6rem;
-		height: 4.5rem;
+		height: 4.6rem;
 		padding: 0;
 		top: 34.6rem;
 		right: 0.9rem;
